// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Booked Appointment Appointment Not Passed 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-disabled {
  background-color: transparent;
  color: #7E7E7E;
}

<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton emotion-0"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          שישי 11/09, 19:06 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="name"
        >
          <div>
            משה כהן
          </div>
          <div
            className="icons"
          >
            <svg
              onClick={[Function]}
            >
              copy.svg
            </svg>
            <svg
              onClick={[Function]}
            >
              profile.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent bookedAppointmentScreenContent"
    >
      <div
        className="status"
      >
        <div>
          סטטוס:
        </div>
        <div
          className="statusChip"
        >
          <div
            className="appointmentStatusChipContainer"
          >
            <div
              className="appointmentStatusChip greenChip"
            >
              הושלם
            </div>
          </div>
        </div>
      </div>
      <div
        className="details"
      >
        פרטי תורם
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            phone.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            מספר טלפון
          </div>
          <div
            className="values"
          >
            <a
              className="phone"
              href="tel: 0521234567"
            >
              0521234567
            </a>
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            id-card.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            תעודת זהות
          </div>
          <div
            className="values"
          >
            donorId
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            bloodtype.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            סוג דם
          </div>
          <div
            className="values"
          >
            AB+
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            calender.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            נקבע בתאריך
          </div>
          <div
            className="values"
          >
            08/12/2023
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Booked Appointment Cant Remove Donor 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-disabled {
  background-color: transparent;
  color: #7E7E7E;
}

<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton emotion-0"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          שבת 01/01, 03:01 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="name"
        >
          <div>
            משה כהן
          </div>
          <div
            className="icons"
          >
            <svg
              onClick={[Function]}
            >
              copy.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent bookedAppointmentScreenContent"
    >
      <div
        className="status"
      >
        <div>
          סטטוס:
        </div>
        <div
          className="statusChip"
        >
          <div
            className="appointmentStatusChipContainer"
          >
            <div
              className="appointmentStatusChip greenChip"
            >
              הושלם
            </div>
          </div>
        </div>
        <svg
          className="button"
          onClick={[Function]}
        >
          edit.svg
        </svg>
      </div>
      <div
        className="details"
      >
        פרטי תורם
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            phone.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            מספר טלפון
          </div>
          <div
            className="values"
          >
            <a
              className="phone"
              href="tel: 0521234567"
            >
              0521234567
            </a>
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            id-card.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            תעודת זהות
          </div>
          <div
            className="values"
          >
            donorId
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            bloodtype.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            סוג דם
          </div>
          <div
            className="values"
          >
            AB+
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            calender.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            נקבע בתאריך
          </div>
          <div
            className="values"
          >
            08/12/2023
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Booked Appointment Default 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-disabled {
  background-color: transparent;
  color: #7E7E7E;
}

<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton emotion-0"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          שבת 01/01, 03:01 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="name"
        >
          <div>
            משה כהן
          </div>
          <div
            className="icons"
          >
            <svg
              onClick={[Function]}
            >
              copy.svg
            </svg>
            <svg
              onClick={[Function]}
            >
              profile.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent bookedAppointmentScreenContent"
    >
      <div
        className="status"
      >
        <div>
          סטטוס:
        </div>
        <div
          className="statusChip"
        >
          <div
            className="appointmentStatusChipContainer"
          >
            <div
              className="appointmentStatusChip greenChip"
            >
              הושלם
            </div>
          </div>
        </div>
        <svg
          className="button"
          onClick={[Function]}
        >
          edit.svg
        </svg>
      </div>
      <div
        className="details"
      >
        פרטי תורם
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            phone.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            מספר טלפון
          </div>
          <div
            className="values"
          >
            <a
              className="phone"
              href="tel: 0521234567"
            >
              0521234567
            </a>
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            id-card.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            תעודת זהות
          </div>
          <div
            className="values"
          >
            donorId
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            bloodtype.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            סוג דם
          </div>
          <div
            className="values"
          >
            AB+
          </div>
        </div>
      </div>
      <div
        className="infoBar"
      >
        <div
          className="icon"
        >
          <svg>
            calender.svg
          </svg>
        </div>
        <div
          className="titleContent"
        >
          <div>
            נקבע בתאריך
          </div>
          <div
            className="values"
          >
            08/12/2023
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
